--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express.js": "^1.0.0",
     "knex": "^3.1.0",
     "method-override": "^3.0.0",
+    "mongoose": "^8.5.1",
+    "mysql": "^2.18.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.12.0"
